--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Nidoca IPTV</string>
     <string name="action_settings">Settings</string>
     <string name="media_route_menu_title">Cast</string>
+    <string name="m3u_url_input">m3u</string>
 </resources>
