--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="media_route_menu_title">Cast</string>
     <string name="m3u_url_input">m3u</string>
+    <string name="m3u_url">URL</string>
 </resources>
