--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Nidoca IPTV</string>
     <string name="action_settings">Settings</string>
     <string name="media_route_menu_title">Cast</string>
-    <string name="m3u_url_input">m3u</string>
+    <string name="m3u_url_import_checked">m3u</string>
     <string name="m3u_url">URL</string>
+    <string name="m3_url_import_text">enter m3u url...</string>
 </resources>
